--- a/screen_config.html
+++ b/screen_config.html
@@ -89,16 +89,16 @@
     // }
     function fillvalues()
     {
-      document.getElementById('member').defaultValue= 4;    
-      document.getElementById('field1').defaultValue="Item";    
-      document.getElementById('field2').defaultValue="Price";    
-      document.getElementById('field3').defaultValue="Qty";    
-      document.getElementById('field4').defaultValue="Amt";    
-      document.getElementById('coord1').defaultValue="83;159";    
-      document.getElementById('coord2').defaultValue="165;162";    
-      document.getElementById('coord3').defaultValue="249;161";    
-      document.getElementById('coord4').defaultValue="329;161";    
-      document.getElementById('maxxy').defaultValue="413;213";  
+      // document.getElementById('member').defaultValue= 4;    
+      // document.getElementById('field1').defaultValue="Item";    
+      // document.getElementById('field2').defaultValue="Price";    
+      // document.getElementById('field3').defaultValue="Qty";    
+      // document.getElementById('field4').defaultValue="Amt";    
+      // document.getElementById('coord1').defaultValue="83;159";    
+      // document.getElementById('coord2').defaultValue="165;162";    
+      // document.getElementById('coord3').defaultValue="249;161";    
+      // document.getElementById('coord4').defaultValue="329;161";    
+      // document.getElementById('maxxy').defaultValue="413;213";  
     }
     </script>
 
